RESOLVED FIXED239815
GPUProcess doesn't get notified of imminent process suspension
https://bugs.webkit.org/show_bug.cgi?id=239815
Summary GPUProcess doesn't get notified of imminent process suspension
Chris Dumez
Reported 2022-04-27 11:36:51 PDT
GPUProcess doesn't get notified of imminent process suspension.
Attachments
Chris Dumez
Comment 1 2022-04-27 11:42:42 PDT
EWS
Comment 2 2022-04-27 21:10:20 PDT
Committed r293562 (250076@main): <https://commits.webkit.org/250076@main> Reviewed commits have been landed. Closing PR #415 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-04-27 21:11:14 PDT
Note You need to log in before you can comment on or make changes to this bug.